# CMemoryPointer

./: .gitignore
src/: CMakeLists.txt  CMemPlatform.c  CMemPlatform.h  CMemoryPointer.c  CMemoryPointer.h  CMemoryPointerExt.c  CMemoryPointerExt.h  main.c
